<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/menu_home"
        android:id="@+id/home"
        android:icon="@drawable/home"/>
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/menu_health"
        android:id="@+id/health"
        android:icon="@drawable/health"/>
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/menu_games"
        android:id="@+id/games"
        android:icon="@drawable/game_controller"/>
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/menu_profile"
        android:id="@+id/profile"
        android:icon="@drawable/profile"/>
</menu>