<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.BoardingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="40dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvMessage1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="16dp"
                android:fontFamily="@font/be_vietnam_bold"
                android:text="@string/text_let_s_get_started"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold"
                app:drawableTopCompat="@drawable/logo_colored" />

            <TextView
                android:id="@+id/tvMessage2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/be_vietnam_bold"
                android:gravity="center"
                android:text="@string/text_be_updated" />

        </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:backgroundTint="@color/light_salmon"
            android:fontFamily="@font/archivo_narrow"
            android:padding="12dp"
            android:text="@string/text_login"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="32dp" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/archivo_narrow"
            android:padding="12dp"
            android:text="@string/text_sign_up"
            android:textColor="@color/salmon"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@color/white"
            app:cornerRadius="32dp"
            app:strokeColor="@color/salmon"
            app:strokeWidth="1dp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivStyling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/styling_waves"
            tools:srcCompat="@drawable/styling_waves" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>