<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.OnboardingFragmentFirst">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="40dp">

        <LinearLayout
            android:id="@+id/layoutSliderContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivSlider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/vector_slider_1" />

        </LinearLayout>

        <ImageView
            android:id="@+id/ivVector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:layout_marginBottom="100dp"
            app:srcCompat="@drawable/vector_boarding_1"
            tools:srcCompat="@drawable/vector_boarding_1" />

        <TextView
            android:id="@+id/tvBoardingMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/be_vietnam_bold"
            android:text="@string/text_boarding_1"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/layoutButtonContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|fill_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSkip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:fontFamily="@font/be_vietnam_bold"
                android:insetRight="20dp"
                android:text="@string/text_skip"
                android:textColor="#A1A8B0" />

            <ImageButton
                android:id="@+id/btnNext"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="180dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="@color/light_salmon"
                android:contentDescription="@string/content_description"
                android:scaleType="center"
                android:src="@drawable/arrow_right"
                tools:src="@drawable/arrow_right" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>